--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <div class="container">
           <!-- Logo -->
           <h1 id="logo">
-            <a href="https://github.com/CommunityPro/portfolio-html"
+            <a href="#"
               ><img src="./assets/logo.png" alt="Your Logo"
             /></a>
           </h1>
@@ -100,11 +100,11 @@
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
             <li><a class="nav-link" href="#">CONTACT</a></li>
-            <li><a class="nav-link" href="#">BlOG</a></li>
+            <li><a class="nav-link" href="#skills">SKILLS</a></li>
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
+                href="https://peerlist.io/shettyrashi"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
@@ -133,21 +133,20 @@
           src="assets/profile-image.svg"
           alt=""
         />
-        <h1>Hi I'm Franklin</h1>
+        <h1>Hello I'm Rashi</h1>
 
         <div class="content-text">
-          <h2>Building digital</h2>
-          <h2>products, brands, and experience.</h2>
+          <h2>I'm a front-end developer</h2>
+          <h2> who enjoys building web apps.</h2>
 
-          <p>
-            A Frontend Developer and Visual Designer with experience in web
-            design, brand identity and product design.
+          <p >
+            Experienced in building robust web applications, Website UI's and Web Designs
           </p>
         </div>
         <a
-          href="https://github.com/CommunityPro/portfolio-html"
+          href="#"
           class="btn btn-secondary"
-          target="_blank"
+
           >Connect With Me</a
         >
       </section>
@@ -158,7 +157,7 @@
       <div class="division"></div>
       <div class="content-text">
         <h2>Projects</h2>
-        <p>Check out some of my personal and paid projects</p>
+        <p>Check out some of my personal and practice projects</p>
       </div>
 
       <article class="project">
@@ -166,13 +165,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project One</h3>
-              <p>React, Redux, SASS</p>
+              <h3>MoviesHub</h3>
+              <p>ReactJS, React Hooks, TMDB API, Resposive Design</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/MoviesDB-app-react?tab=readme-ov-file" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://movies-db-app-react.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -181,13 +180,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Two</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Pixifi</h3>
+              <p>ReactJS, Unsplash API, Styled-components, Infinite-scroll</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/pixifi-app-reactjs" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://pixifi-app-reactjs.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -196,13 +195,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Three</h3>
-              <p>React, Redux, SASS</p>
+              <h3>VStream</h3>
+              <p>ReactJS, Material UI, Rapid API, React-Router</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/vstream-using-react" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://vstream-using-react.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -211,13 +210,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Four</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Notify</h3>
+              <p>React, Javacript, CSS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/note-taker-react" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://note-taker-react-five.vercel.app/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -226,13 +225,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Five</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Typify</h3>
+              <p>Javacript, HTML, CSS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/typing-test-javascript" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://vrashi16.github.io/typing-test-javascript/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -241,55 +240,70 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Six</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Tic-Tac-Toe</h3>
+              <p>Javacript, HTML, CSS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/VRashi16/tic-tac-toe-js" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://vrashi16.github.io/tic-tac-toe-js/" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
       </article>
 
-      <a href="#" class="btn btn-secondary"
-        target="_blank" >See More <i class="fas fa-arrow-right"></i
+      <a href="#projects" class="btn btn-secondary">More Soon <i class="fas fa-arrow-right"></i
       ></a>
     </section>
 
+    <!--skills-->
+    <section id="skills" class="project-container container">
+      <div class="division-skills"></div>
+      <div class="content-text">
+        <h2>Skills</h2>
+        <p>My primary stack including React,TypeScript. 
+          I am always looking to learn new technologies.</p>
+      </div>
+      <div>
+        <a href=""
+          ><img src="./assets/project/project-two.png" alt="Facebook"
+        width="100px"/></a>
+        </div>
+
+        <div class="container">
+          <a href="mailto:shetty.rashi16@gmail.com">shetty.rashi16@gmail.com</a>
+          <!-- Social links -->
+          <div class="social">
+            <a href=""><img src="./assets/facebook-icon.svg" alt="Facebook"></a>
+            <a href="#"><img src="./assets/twitter-icon.svg" alt="Twitter"></a>
+            <a href="#"><img src="./assets/linkedin-icon.svg" alt="Linkedin"></a>
+            <a href="https://github.com/VRashi16" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub"></a>
+            <a href="#"><img src="./assets/hashnode-icon.svg" alt="Hashnode"></a>
+          </div>
+        
+          <!-- <p> Made with ❤️ React</p> -->
+        </div>
+
+
     <footer id="footer">
       <div class="container">
-        <a href="mailto:communitypro47@gmail.com">communitypro47@gmail.com</a>
+        <a href="mailto:shetty.rashi16@gmail.com">shetty.rashi16@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="#" target="_blank"
+          <a href=""
             ><img src="./assets/facebook-icon.svg" alt="Facebook"
           /></a>
-          <a href="#" target="_blank"><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
-          <a href="#" target="_blank"
+          <a href="#" ><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
+          <a href="#" 
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
-          <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-          <a href="#" target="_blank"
+          <a href="https://github.com/VRashi16" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
+          <a href="#"
             ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
           /></a>
         </div>
-        <!-- Attribution -->
-        <div class="attribution">
-          <a
-            href="https://github.com/CommunityPro/portfolio-html"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://user-images.githubusercontent.com/62628408/157202263-9174da24-b19a-4017-9b7c-a1d26ae8f014.svg"
-              alt="attribution"
-              width="150px"
-            />
-          </a>
-        </div>
-        <p>Copyright &copy; Communitypro <span id="datee"></span>, All rights reserved</p>
+      
+        <!-- <p> Made with ❤️ React</p> -->
       </div>
     </footer>
     <script src="js/script.js"></script>
