--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://peerlist.io/shettyrashi"
+                href="https://peerlist.io/shettyrashi" target="_blank"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
@@ -139,7 +139,7 @@
           <h2>I'm a front-end developer</h2>
           <h2> who enjoys building web apps.</h2>
 
-          <p >
+          <p style="font-size: 15px;">
             Experienced in building robust web applications, Website UI's and Web Designs
           </p>
         </div>
@@ -157,7 +157,7 @@
       <div class="division"></div>
       <div class="content-text">
         <h2>Projects</h2>
-        <p>Check out some of my personal and practice projects</p>
+        <p style="font-size: 15px;">Check out some of my personal and practice projects</p>
       </div>
 
       <article class="project">
@@ -191,7 +191,7 @@
           </div>
         </div>
 
-        <!-- Porject 3 -->
+        <!-- Project 3 -->
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
@@ -322,6 +322,7 @@
 
     <footer id="footer">
       <div class="container">
+        
         <a href="mailto:shetty.rashi16@gmail.com">shetty.rashi16@gmail.com</a>
         <!-- Social links -->
         <div class="social">
@@ -336,9 +337,11 @@
           <a href="#"
             ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
           /></a>
+
         </div>
       
-        <!-- <p> Made with ❤️ React</p> -->
+        <p> Made with ❤️ JS</p>
+        <p>Website is still under progress, any suggestions are welcome.</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
