updating project card

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
           <div class="project-info">
             <div class="project-bio">
               <h3>MoviesHub</h3>
-              <p>ReactJS, React Hooks, TMDB API, Resposive Design</p>
+              <p>ReactJS, React Hooks, Redux, TMDB API, Resposive Design</p>
             </div>
 
             <div class="project-link">
